tests/vertical-slice/reject/mir_gap_hashmap_for_in.hew
// Ratchet for the HashMap `for (k, v) in m` NYI gap (g12-A).
//
// Iterating a HashMap directly with `for (k, v) in m` is not yet lowered: the
// for-in desugar only admits Vec/VecIter and user-nominal concrete
// IntoIterator impls, and HashMap is a builtin nominal that never reaches the
// generic into_iter path. The compiler must fail closed with a clean
// E_NOT_YET_IMPLEMENTED, not silently drop the loop body.
//
// When g12 adds `impl IntoIterator for HashMap<K, V>` (+ the builtin for-in
// arm) this fixture flips to an accept — see `hashmap_for_in_sum` in run.sh.
pub fn main() -> i64 {
    let m: HashMap<i64, i64> = HashMap::new();
    m.insert(1, 10);
    m.insert(2, 20);
    var total = 0;
    for (k, v) in m {
        total = total + k + v;
    }
    total
}
